--- a/package.json
+++ b/package.json
@@ -41,5 +41,9 @@
   },
   "devDependencies": {
     "chokidar": "^3.5.2"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=7.10.0"
   }
 }
